# BacTraq

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
BacTrac/bactrac/: bactrac.py
BacTraq/: __init__.py  bactraq.py  cli.py  cluster_trace.py  clustering.py  helper.py  makeHistory.py  reporting.py
BacTraq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
BacTraq/history/: makeHistory.py
docs/: example.md
example/: new_run_cluster.csv  new_run_cluster_summary.csv  new_run_snpdist.tsv  prev_clusters.csv
tests/: conftest.py  test_bactraq.py  test_makeHistory.py
